Fixed bugs in UnitManager